// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentPage Renders a consistent snapshot when empty 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
        role="form"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              firstName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="lastName"
            >
              lastName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="gradeLevel"
            >
              gradeLevel
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="areasOfNeed"
            >
              areasOfNeed
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-2-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-2-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-2-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="areasOfNeed"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="family"
            >
              family
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-3-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-3-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-3-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="family"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="notes"
            >
              notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Add
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
      role="form"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            firstName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="lastName"
          >
            lastName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="gradeLevel"
          >
            gradeLevel
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="areasOfNeed"
          >
            areasOfNeed
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-2-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-2-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-2-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="areasOfNeed"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="family"
          >
            family
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-3-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-3-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-3-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="family"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="notes"
          >
            notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StudentPage Renders a consistent snapshot when prefilled with data 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
        role="form"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              firstName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="lastName"
            >
              lastName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="gradeLevel"
            >
              gradeLevel
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="areasOfNeed"
            >
              areasOfNeed
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-4-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-3w2yfm-ValueContainer"
                    >
                      <div
                        class=" css-1p3m7a8-multiValue"
                      >
                        <div
                          class=" css-wsp0cs-MultiValueGeneric"
                        >
                          Mathicals
                        </div>
                        <div
                          aria-label="Remove Mathicals"
                          class=" css-12a83d4-MultiValueRemove"
                          role="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class=" css-1p3m7a8-multiValue"
                      >
                        <div
                          class=" css-wsp0cs-MultiValueGeneric"
                        >
                          Astronomy
                        </div>
                        <div
                          aria-label="Remove Astronomy"
                          class=" css-12a83d4-MultiValueRemove"
                          role="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="14"
                            viewBox="0 0 20 20"
                            width="14"
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="areasOfNeed"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value="areaOfNeed1"
                    />
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value="areaOfNeed2"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="family"
            >
              family
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-5-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1dimb5e-singleValue"
                      >
                        Fooft
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="family"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value="family1"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="notes"
            >
              notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Update
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
      role="form"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            firstName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="lastName"
          >
            lastName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="gradeLevel"
          >
            gradeLevel
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="areasOfNeed"
          >
            areasOfNeed
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-4-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-3w2yfm-ValueContainer"
                  >
                    <div
                      class=" css-1p3m7a8-multiValue"
                    >
                      <div
                        class=" css-wsp0cs-MultiValueGeneric"
                      >
                        Mathicals
                      </div>
                      <div
                        aria-label="Remove Mathicals"
                        class=" css-12a83d4-MultiValueRemove"
                        role="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="14"
                          viewBox="0 0 20 20"
                          width="14"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class=" css-1p3m7a8-multiValue"
                    >
                      <div
                        class=" css-wsp0cs-MultiValueGeneric"
                      >
                        Astronomy
                      </div>
                      <div
                        aria-label="Remove Astronomy"
                        class=" css-12a83d4-MultiValueRemove"
                        role="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="14"
                          viewBox="0 0 20 20"
                          width="14"
                        >
                          <path
                            d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                          />
                        </svg>
                      </div>
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="areasOfNeed"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                        />
                      </svg>
                    </div>
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value="areaOfNeed1"
                  />
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value="areaOfNeed2"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="family"
          >
            family
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-5-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1dimb5e-singleValue"
                    >
                      Fooft
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="family"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value="family1"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="notes"
          >
            notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Update
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`StudentPage Renders without any families or areas of need present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <form
        autocomplete="off"
        class="flex flex-col gap-3"
        role="form"
      >
        <input
          autocomplete="false"
          name="hidden"
          style="display: none;"
          type="text"
        />
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="firstName"
            >
              firstName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="firstName"
                  class="input w-full"
                  data-cy="input-firstName"
                  data-testid="input-firstName"
                  name="firstName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="lastName"
            >
              lastName
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="lastName"
                  class="input w-full"
                  data-cy="input-lastName"
                  data-testid="input-lastName"
                  name="lastName"
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="gradeLevel"
            >
              gradeLevel
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <input
                  aria-labelledby="gradeLevel"
                  class="input w-full"
                  data-cy="input-gradeLevel"
                  data-testid="input-gradeLevel"
                  min="1"
                  name="gradeLevel"
                  type="number"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="areasOfNeed"
            >
              areasOfNeed
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-areasOfNeed css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-8-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-8-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-8-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="areasOfNeed"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <div>
                    <input
                      name="areasOfNeed"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="family"
            >
              family
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <div
                  class="w-full creatable-family css-b62m3t-container"
                >
                  <span
                    class="css-1f43avz-a11yText-A11yText"
                    id="react-select-9-live-region"
                  />
                  <span
                    aria-atomic="false"
                    aria-live="polite"
                    aria-relevant="additions text"
                    class="css-1f43avz-a11yText-A11yText"
                    role="log"
                  />
                  <div
                    class=" css-189lesj-control"
                  >
                    <div
                      class=" css-1fdsijx-ValueContainer"
                    >
                      <div
                        class=" css-1jqq78o-placeholder"
                        id="react-select-9-placeholder"
                      >
                        Select...
                      </div>
                      <div
                        class=" css-qbdosj-Input"
                        data-value=""
                      >
                        <input
                          aria-activedescendant=""
                          aria-autocomplete="list"
                          aria-describedby="react-select-9-placeholder"
                          aria-expanded="false"
                          aria-haspopup="true"
                          autocapitalize="none"
                          autocomplete="off"
                          autocorrect="off"
                          class=""
                          id="family"
                          role="combobox"
                          spellcheck="false"
                          style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                          tabindex="0"
                          type="text"
                          value=""
                        />
                      </div>
                    </div>
                    <div
                      class=" css-1hb7zxy-IndicatorsContainer"
                    >
                      <span
                        class=" css-1u9des2-indicatorSeparator"
                      />
                      <div
                        aria-hidden="true"
                        class=" css-1xc3v61-indicatorContainer"
                      >
                        <svg
                          aria-hidden="true"
                          class="css-tj5bde-Svg"
                          focusable="false"
                          height="20"
                          viewBox="0 0 20 20"
                          width="20"
                        >
                          <path
                            d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                  <input
                    name="family"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mt-1 space-y-8 sm:space-y-0"
        >
          <div
            class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
          >
            <label
              class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
              for="notes"
            >
              notes
            </label>
            <div
              class="mt-2 sm:col-span-2 sm:mt-0"
            >
              <div
                class="flex sm:max-w-md"
              >
                <textarea
                  aria-labelledby="notes"
                  class="textarea w-full"
                  data-cy="textarea-notes"
                  data-testid="textarea-notes"
                  name="notes"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <button
            class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
            data-cy="submit-form"
            disabled=""
            role="submit"
            type="submit"
          >
            <span>
              Add
            </span>
          </button>
        </div>
      </form>
    </div>
  </body>,
  "container": <div>
    <form
      autocomplete="off"
      class="flex flex-col gap-3"
      role="form"
    >
      <input
        autocomplete="false"
        name="hidden"
        style="display: none;"
        type="text"
      />
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="firstName"
          >
            firstName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="firstName"
                class="input w-full"
                data-cy="input-firstName"
                data-testid="input-firstName"
                name="firstName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="lastName"
          >
            lastName
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="lastName"
                class="input w-full"
                data-cy="input-lastName"
                data-testid="input-lastName"
                name="lastName"
                type="text"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="gradeLevel"
          >
            gradeLevel
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <input
                aria-labelledby="gradeLevel"
                class="input w-full"
                data-cy="input-gradeLevel"
                data-testid="input-gradeLevel"
                min="1"
                name="gradeLevel"
                type="number"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="areasOfNeed"
          >
            areasOfNeed
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-areasOfNeed css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-8-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-8-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-8-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="areasOfNeed"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div>
                  <input
                    name="areasOfNeed"
                    type="hidden"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="family"
          >
            family
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <div
                class="w-full creatable-family css-b62m3t-container"
              >
                <span
                  class="css-1f43avz-a11yText-A11yText"
                  id="react-select-9-live-region"
                />
                <span
                  aria-atomic="false"
                  aria-live="polite"
                  aria-relevant="additions text"
                  class="css-1f43avz-a11yText-A11yText"
                  role="log"
                />
                <div
                  class=" css-189lesj-control"
                >
                  <div
                    class=" css-1fdsijx-ValueContainer"
                  >
                    <div
                      class=" css-1jqq78o-placeholder"
                      id="react-select-9-placeholder"
                    >
                      Select...
                    </div>
                    <div
                      class=" css-qbdosj-Input"
                      data-value=""
                    >
                      <input
                        aria-activedescendant=""
                        aria-autocomplete="list"
                        aria-describedby="react-select-9-placeholder"
                        aria-expanded="false"
                        aria-haspopup="true"
                        autocapitalize="none"
                        autocomplete="off"
                        autocorrect="off"
                        class=""
                        id="family"
                        role="combobox"
                        spellcheck="false"
                        style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                        tabindex="0"
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class=" css-1hb7zxy-IndicatorsContainer"
                  >
                    <span
                      class=" css-1u9des2-indicatorSeparator"
                    />
                    <div
                      aria-hidden="true"
                      class=" css-1xc3v61-indicatorContainer"
                    >
                      <svg
                        aria-hidden="true"
                        class="css-tj5bde-Svg"
                        focusable="false"
                        height="20"
                        viewBox="0 0 20 20"
                        width="20"
                      >
                        <path
                          d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <input
                  name="family"
                  type="hidden"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-1 space-y-8 sm:space-y-0"
      >
        <div
          class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-2 sm:py-1"
        >
          <label
            class="block text-sm font-medium leading-6 text-gray-900 sm:pt-1.5"
            for="notes"
          >
            notes
          </label>
          <div
            class="mt-2 sm:col-span-2 sm:mt-0"
          >
            <div
              class="flex sm:max-w-md"
            >
              <textarea
                aria-labelledby="notes"
                class="textarea w-full"
                data-cy="textarea-notes"
                data-testid="textarea-notes"
                name="notes"
              />
            </div>
          </div>
        </div>
      </div>
      <div>
        <button
          class="text-sm font-semibold px-3 py-2 flex flex-row justify-center rounded-md shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 bg-indigo-200  text-white"
          data-cy="submit-form"
          disabled=""
          role="submit"
          type="submit"
        >
          <span>
            Add
          </span>
        </button>
      </div>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
